--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ x-build-base: &build-base
   restart: "no"
 
 x-web-base: &web-base
-  image: python:3-alpine
+  image: maxwellknight/nes-emulator:latest
   volumes:
     - ./web:/app/web
   working_dir: /app
